--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,27 @@
 .mt-2rem {
   margin-top: 2rem;
 }
+
+.text-center {
+  text-align: center !important;
+}
+
+.box {
+  border-style: solid;
+  border-width: 1px;
+  padding: 1rem;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.bg-white {
+  color: black;
+  background-color: white;
+}
+
+.bg-grey {
+  color: black;
+  background-color: grey;;
+}
